# Snake-public

./: .gitignore  CMakeLists.txt  NOTICE  README.md
src/: def.h  field.cpp  field.h  game_unit.cpp  game_unit.h  game_window.cpp  game_window.h  ivec2.cpp  ivec2.h  main.cpp  snake.cpp  snake.h  window.cpp  window.h
